--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+__pycache__/maze.cpython-311.pyc
+/__pycache__
